infrastructure/lkat-cluster/masterchief.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masterchief-deployment
  labels:
    app: masterchief
spec:
  replicas: 1
  selector:
    matchLabels:
      app: masterchief
  template:
    metadata:
      labels:
        app: masterchief
    spec:
      containers:
        - name: masterchief-container
          image: loonison101/masterchief
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: public
  labels:
    app: eventstore-admin
spec:
  rules:
    - host: tracker.climb.rest
      http:
        paths:
        - path: /idk
          pathType: Prefix
          backend:
            service:
              name: eventstore-admin
              port:
                number: 2113
